--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: coral;
-    text-align: center;
+    text-align: left;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
